--- a/uin23ak3_resourceapp_group7/src/css/main.css
+++ b/uin23ak3_resourceapp_group7/src/css/main.css
@@ -1,13 +1,3 @@
-:root {
-  --gray: rgb(112, 112, 112);
-  --gray_2: rgb(194, 194, 194);
-  --gray_3: rgb(237, 237, 237);
-  --nyanblue: rgb(35, 223, 230);
-  --white: rgb(255, 255, 255);
-  --black: #000000;
-  --maxwidth: 1200px;
-}
-
 * {
   box-sizing: border-box;
 }
@@ -75,7 +65,6 @@ nav {
   border-bottom: 5px solid var(--nyanblue);
   column-gap: 1rem;
 }
-
 nav a {
   display: flex;
   text-decoration: none;
@@ -90,13 +79,11 @@ nav a {
   text-transform: uppercase;
   transition: ease-in-out 0.4s;
 }
-
-nav a:hover {
+nav a :hover {
   background-color: var(--nyanblue);
   color: var(--black);
   border-color: var(--nyanblue);
 }
-
 nav .active {
   background-color: var(--nyanblue);
   color: var(--white);
@@ -154,7 +141,7 @@ nav .active {
     flex-wrap: wrap;
     flex-direction: column;
   }
-  nav a {
+  nav nav a {
     font-size: 16px;
   }
   main {
