--- a/uin23ak3_resourceapp_group7/src/sass/main.scss
+++ b/uin23ak3_resourceapp_group7/src/sass/main.scss
@@ -1,11 +1,11 @@
 :root {
-    --gray: rgb(112, 112, 112);
-    --gray_2: rgb(194, 194, 194);
-    --gray_3: rgb(237, 237, 237);
-    --nyanblue: rgb(35, 223, 230);
-    --white: rgb(255, 255, 255);
-    --black: #000000;   
-    --maxwidth: 1200px;
+    $gray: rgb(112, 112, 112);
+    $gray_2: rgb(194, 194, 194);
+    $gray_3: rgb(237, 237, 237);
+    $nyanblue: rgb(35, 223, 230);
+    $white: rgb(255, 255, 255);
+    $black: #000000;   
+    $maxwidth: 1200px;
 
 }
 
@@ -75,36 +75,34 @@ nav {
     margin-top: 3rem;
     border-bottom: 5px solid var(--nyanblue);
     column-gap: 1rem;
+    a{
+        display: flex;
+        text-decoration: none;
+        color: var(--gray);
+        background-color: var(--white);
+        display: inline-block;
+        border-top: 1px solid var(--gray_2);
+        border-left: 1px solid var(--gray_2);
+        border-right: 1px solid var(--gray_2);
+        padding: 1.2rem;
+        font-size: 1.6rem;
+        text-transform: uppercase;
+        transition: ease-in-out .4s;
+
+        :hover {
+            background-color: var(--nyanblue);
+            color: var(--black);
+            border-color: var(--nyanblue);
+        }
+    }  
+    .active {
+        background-color: var(--nyanblue);
+        color: var(--white);
+        border-color: var(--nyanblue);
+    }
 }
 
-nav a{
-    display: flex;
-    text-decoration: none;
-    color: var(--gray);
-    background-color: var(--white);
-    display: inline-block;
-    border-top: 1px solid var(--gray_2);
-    border-left: 1px solid var(--gray_2);
-    border-right: 1px solid var(--gray_2);
-    padding: 1.2rem;
-    font-size: 1.6rem;
-    text-transform: uppercase;
-    transition: ease-in-out .4s;
 
-    
-}
-
-nav a:hover {
-    background-color: var(--nyanblue);
-    color: var(--black);
-    border-color: var(--nyanblue);
-}
-
-nav .active {
-    background-color: var(--nyanblue);
-    color: var(--white);
-    border-color: var(--nyanblue);
-}
 
 .text {
     padding-right: 4rem;
@@ -140,11 +138,11 @@ nav .active {
         max-width: 480px;
         display: flex;
         flex-wrap: wrap;
-        flex-direction: column;    
-    }
-
-    nav a{
-        font-size: 16px;
+        flex-direction: column;
+        
+        a{
+            font-size: 16px;
+        }   
     }
 
     .text {
@@ -163,11 +161,11 @@ nav .active {
 
         display: flex;
         flex-wrap: wrap;
-        flex-direction: column;   
-    }
+        flex-direction: column;  
 
-    nav a{
-        font-size: 16px;
+        nav a{
+            font-size: 16px;
+        }
     }
 
     main {
