--- a/uin23ak3_resourceapp_group7/src/css/main.css
+++ b/uin23ak3_resourceapp_group7/src/css/main.css
@@ -12,7 +12,7 @@ body {
 
 .category_title {
   text-transform: uppercase;
-  color: var(--gray);
+  color: rgb(112, 112, 112);
   font-size: 30px;
 }
 
@@ -20,7 +20,7 @@ div.container {
   width: 100%;
   display: flex;
   flex-direction: column;
-  max-width: var(--maxwidth);
+  max-width: 1200px;
   margin: 0 auto;
   position: relative;
   padding: 2.5rem 0;
@@ -33,7 +33,7 @@ div.container {
 #header {
   width: 100%;
   display: flex;
-  border: 1px solid var(--gray);
+  border: 1px solid rgb(112, 112, 112);
   padding: 1rem;
   padding-left: 2rem;
   justify-content: space-between;
@@ -50,8 +50,8 @@ li {
 main {
   width: 100%;
   display: flex;
-  max-width: var(--maxwidth);
-  border: 1px solid var(--gray);
+  max-width: 1200px;
+  border: 1px solid rgb(112, 112, 112);
   display: flex;
   flex-wrap: wrap;
   padding-left: 2rem;
@@ -59,56 +59,56 @@ main {
 
 nav {
   width: 100%;
-  max-width: var(--maxwidth);
+  max-width: 1200px;
   display: flex;
   margin-top: 3rem;
-  border-bottom: 5px solid var(--nyanblue);
+  border-bottom: 5px solid rgb(35, 223, 230);
   column-gap: 1rem;
 }
 nav a {
   display: flex;
   text-decoration: none;
-  color: var(--gray);
-  background-color: var(--white);
+  color: rgb(112, 112, 112);
+  background-color: rgb(255, 255, 255);
   display: inline-block;
-  border-top: 1px solid var(--gray_2);
-  border-left: 1px solid var(--gray_2);
-  border-right: 1px solid var(--gray_2);
+  border-top: 1px solid rgb(194, 194, 194);
+  border-left: 1px solid rgb(194, 194, 194);
+  border-right: 1px solid rgb(194, 194, 194);
   padding: 1.2rem;
   font-size: 1.6rem;
   text-transform: uppercase;
   transition: ease-in-out 0.4s;
 }
-nav a :hover {
-  background-color: var(--nyanblue);
-  color: var(--black);
-  border-color: var(--nyanblue);
+nav a:hover {
+  background-color: rgb(35, 223, 230);
+  color: #000000;
+  border-color: rgb(35, 223, 230);
 }
 nav .active {
-  background-color: var(--nyanblue);
-  color: var(--white);
-  border-color: var(--nyanblue);
+  background-color: rgb(35, 223, 230);
+  color: rgb(255, 255, 255);
+  border-color: rgb(35, 223, 230);
 }
 
 .text {
   padding-right: 4rem;
   font-size: 20px;
-  color: var(--gray);
+  color: rgb(112, 112, 112);
 }
 
 .textInfo {
-  color: var(--gray);
+  color: rgb(112, 112, 112);
 }
 
 #title {
   text-decoration: none;
-  color: var(--gray);
+  color: rgb(112, 112, 112);
 }
 
 @media only screen and (max-width: 480px) {
   .category_title {
     text-transform: uppercase;
-    color: var(--gray);
+    color: rgb(112, 112, 112);
     font-size: 20px;
   }
   main {
