--- a/uin23ak3_resourceapp_group7/src/sass/main.scss
+++ b/uin23ak3_resourceapp_group7/src/sass/main.scss
@@ -1,13 +1,12 @@
-:root {
-    $gray: rgb(112, 112, 112);
-    $gray_2: rgb(194, 194, 194);
-    $gray_3: rgb(237, 237, 237);
-    $nyanblue: rgb(35, 223, 230);
-    $white: rgb(255, 255, 255);
-    $black: #000000;   
-    $maxwidth: 1200px;
 
-}
+$gray: rgb(112, 112, 112);
+$gray_2: rgb(194, 194, 194);
+//$gray_3: rgb(237, 237, 237);
+$nyanblue: rgb(35, 223, 230);
+$white: rgb(255, 255, 255);
+$black: #000000;   
+$maxwidth: 1200px;
+
 
 * {
     box-sizing: border-box;
@@ -23,7 +22,7 @@ body {
 
 .category_title {
     text-transform: uppercase;                                                                                                                                                                                                                                                                                      
-    color: var(--gray);
+    color: $gray;
     font-size: 30px;
 }
 
@@ -31,7 +30,7 @@ div.container {
     width: 100%;
     display: flex;
     flex-direction: column;
-    max-width: var(--maxwidth);
+    max-width: $maxwidth;
     margin: 0 auto;
     position: relative;
     padding: 2.5rem 0;
@@ -44,7 +43,7 @@ div.container {
 #header { 
     width: 100%;
     display: flex;
-    border: 1px solid var(--gray);
+    border: 1px solid $gray;
     padding: 1rem;
     padding-left: 2rem;
     justify-content: space-between;
@@ -61,8 +60,8 @@ li {
 main {
     width:100%;
     display: flex;
-    max-width: var(--maxwidth);
-    border: 1px solid var(--gray);
+    max-width: $maxwidth;
+    border: 1px solid $gray;
     display: flex;
     flex-wrap: wrap;
     padding-left: 2rem;
@@ -70,35 +69,35 @@ main {
 
 nav {
     width: 100%;
-    max-width: var(--maxwidth);
+    max-width: $maxwidth;
     display: flex;
     margin-top: 3rem;
-    border-bottom: 5px solid var(--nyanblue);
+    border-bottom: 5px solid $nyanblue;
     column-gap: 1rem;
+
     a{
         display: flex;
         text-decoration: none;
-        color: var(--gray);
-        background-color: var(--white);
+        color: $gray;
+        background-color: $white;
         display: inline-block;
-        border-top: 1px solid var(--gray_2);
-        border-left: 1px solid var(--gray_2);
-        border-right: 1px solid var(--gray_2);
+        border-top: 1px solid $gray_2;
+        border-left: 1px solid $gray_2;
+        border-right: 1px solid $gray_2;
         padding: 1.2rem;
         font-size: 1.6rem;
         text-transform: uppercase;
         transition: ease-in-out .4s;
-
-        :hover {
-            background-color: var(--nyanblue);
-            color: var(--black);
-            border-color: var(--nyanblue);
-        }
     }  
+    a:hover {
+        background-color: $nyanblue;
+        color: $black;
+        border-color: $nyanblue;
+    }
     .active {
-        background-color: var(--nyanblue);
-        color: var(--white);
-        border-color: var(--nyanblue);
+        background-color: $nyanblue;
+        color: $white;
+        border-color: $nyanblue;
     }
 }
 
@@ -107,23 +106,23 @@ nav {
 .text {
     padding-right: 4rem;
     font-size: 20px;
-    color: var(--gray);
+    color: $gray;
 }
 
 .textInfo{
-    color:var(--gray);
+    color: $gray;
 }
 
 #title {
     text-decoration: none;
-    color: var(--gray);
+    color: $gray;
 }
 
 @media only screen and (max-width:480px) {
 
     .category_title {
         text-transform: uppercase;                                                                                                                                                                                                                                                                                      
-        color: var(--gray);
+        color: $gray;
         font-size: 20px;
     }
 
